--- a/src/index.css
+++ b/src/index.css
@@ -23,17 +23,45 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  /* margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
+  min-height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  min-width: 100vw;
   min-height: 100vh;
+  margin: 0;
+  background-color: aqua;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+a:hover {
+  color: black;
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  /* height: auto; */
+}
+
 
 button {
   border-radius: 8px;
